--- a/src/app/conversor/components/conversor.component.html
+++ b/src/app/conversor/components/conversor.component.html
@@ -25,5 +25,7 @@
                 data-target="#modalCotacao" (click)="converter()" [disabled]="!conversaoForm.form.valid">
         </form>
     </div>
-   
+    <modal-cotacao [id]="'modalCotacao'" [conversaoResponse]="conversaoResponse" [conversao]="conversao"
+        (onConfirm)="init()">
+    </modal-cotacao>
 </div>
